basic crud working + test cases added
